--- a/public/results.html
+++ b/public/results.html
@@ -67,6 +67,7 @@
   <!-- Engine modules: classify + law_audit -->
   <script src="../engine/classify/classify.js"></script>
   <script src="../engine/law_audit/law_audit.js"></script>
+  <script src="../engine/funding_audit/funding_audit.js"></script>
 
   <!-- Simple renderer that waits for ABE_LawAudit in localStorage -->
   <script>
