--- a/public/index.html
+++ b/public/index.html
@@ -126,6 +126,18 @@
   });
 })();
 </script>
-
+    
+  <footer class="abe-footer" style="margin-top:3rem;padding:1.5rem 1rem;font-size:0.8rem;color:var(--muted);text-align:center;">
+  <p>
+    © 2025 Terra Dawn Shouse. A.B.E. — American Butterfly Effect.
+  </p>
+  <p>
+    Licensed under a 
+    <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener noreferrer" style="color:var(--link);">
+      Creative Commons Attribution-NonCommercial 4.0 International License (CC BY-NC 4.0)
+    </a>.
+    No commercial use, no paywalls.
+  </p>
+  </footer>  
 </body>
 </html>
