--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>ABE — Redirecting…</title>
-
-    <!-- Instant redirect to the real app in /public -->
-    <meta http-equiv="refresh" content="0; url=/public/" />
-    <link rel="canonical" href="/public/" />
-  </head>
-  <body style="background:#0b0d12; color:#e6e6e6; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;">
-    <p>
-      Redirecting to
-      <a href="/public/" style="color:#5ddfff;">abemovement.org/public/</a>…
-      If nothing happens, tap the link.
-    </p>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>A.B.E. — Redirecting…</title>
+  <meta http-equiv="refresh" content="0; url=public/index.html">
+</head>
+<body>
+  <p>If you are not redirected automatically, 
+     <a href="public/index.html">click here</a>.
+  </p>
+</body>
 </html>
