--- a/public/index.html
+++ b/public/index.html
@@ -1,143 +1,116 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
-    <meta charset="utf-8" />
-    <title>A.B.E. — American Butterfly Effect</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <title>A.B.E. — American Butterfly Effect Audit Engine</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Your external stylesheet -->
-    <link rel="stylesheet" href="assets/abe.css" />
-
-    <!-- THEME VARIABLES -->
-    <style>
-      :root[data-theme="dark"] {
-        --bg: #0b0d12;
-        --panel: #151923;
-        --ink: #e6e8ee;
-        --muted: #8fa2b7;
-        --accent: #ffd857;
-        --accentGlow: #ffe892;
-        --link: #5ddfff;
-      }
-
-      :root[data-theme="light"] {
-        --bg: #f5f5f7;
-        --panel: #ffffff;
-        --ink: #111827;
-        --muted: #4b5563;
-        --accent: #1f6feb;
-        --accentGlow: #93c5fd;
-        --link: #1f6feb;
-      }
-
-      body {
-        background: var(--bg);
-        color: var(--ink);
-        margin: 0;
-        font-family: system-ui, sans-serif;
-      }
-
-      .theme-toggle {
-        position: fixed;
-        top: 12px;
-        right: 12px;
-        z-index: 9999;
-        background: var(--panel);
-        color: var(--ink);
-        border-radius: 999px;
-        padding: 6px 14px;
-        border: 1px solid rgba(255,255,255,0.15);
-        cursor: pointer;
-        font-size: 14px;
-        display: flex;
-        gap: 6px;
-        align-items: center;
-      }
-
-      .theme-toggle:hover {
-        box-shadow: 0 0 8px var(--accentGlow);
-      }
-    </style>
+  <style>
+    :root {
+      --bg: #0b0d12;
+      --panel: #141820;
+      --ink: #e6e6e6;
+      --muted: #9fb3c8;
+      --accent: #ffd857;
+      --accentGlow: #ffe892;
+      --link: #5ddfff;
+    }
+    body {
+      background: var(--bg);
+      color: var(--ink);
+      font-family: system-ui, -apple-system, 'Segoe UI', Roboto, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      padding: 2rem 1.5rem;
+      text-align: center;
+    }
+    h1 {
+      margin-bottom: 0.5rem;
+      font-size: 2rem;
+      font-weight: 700;
+    }
+    p.subtitle {
+      margin-top: 0;
+      color: var(--muted);
+      font-size: 1rem;
+    }
+    .main-wrap {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 1.5rem;
+      background: var(--panel);
+      border-radius: 12px;
+      border: 1px solid rgba(255,255,255,0.08);
+    }
+    button.abe-btn {
+      background: var(--accent);
+      color: #000;
+      padding: 0.75rem 1.4rem;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      font-weight: 600;
+      cursor: pointer;
+      margin-top: 1.2rem;
+    }
+    button.abe-btn:hover {
+      box-shadow: 0 0 12px var(--accentGlow);
+    }
+    footer {
+      margin-top: 3rem;
+      padding: 1.5rem;
+      text-align: center;
+      color: var(--muted);
+      font-size: 0.85rem;
+    }
+    .footer-license {
+      margin-top: 0.5rem;
+      font-size: 0.8rem;
+      opacity: 0.85;
+    }
+    a {
+      color: var(--link);
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 
 <body>
 
-<!-- THEME TOGGLE BUTTON -->
-<button id="theme-toggle" class="theme-toggle">
-  <span id="theme-toggle-icon">🌙</span>
-  <span id="theme-toggle-label">Dark mode</span>
-</button>
-
-<header class="abe-header">
-    <div class="abe-wrap">
-        <h1>A.B.E. — American Butterfly Effect</h1>
-        <p class="abe-lead">
-            Local-only constitutional audit engine for citizens.
-        </p>
-        <button class="abe-btn" onclick="window.location.href='engine/index.html'">
-            Start Audit — Upload Your Case
-        </button>
-    </div>
+<header>
+  <h1>A.B.E. — American Butterfly Effect</h1>
+  <p class="subtitle">Constitutional Fidelity • Rights Integrity • State Law Audit Engine</p>
 </header>
 
-<main class="abe-wrap">
-    <section class="abe-panel">
-        <h2>What this does</h2>
-        <p>
-            You answer a few questions and upload your documents. The engine builds a fully
-            structured intake record in your browser with no uploads — preparing legal,
-            economic, and funding audits in the next phases.
-        </p>
-        <p class="abe-note">
-            Step 1: Intake only. No law lookup yet — the system expands module by module.
-        </p>
-    </section>
-</main>
-
-<!-- THEME SCRIPT -->
-<script>
-(function () {
-  const root = document.documentElement;
-  const toggle = document.getElementById('theme-toggle');
-  const icon = document.getElementById('theme-toggle-icon');
-  const label = document.getElementById('theme-toggle-label');
-
-  function applyTheme(theme) {
-    root.setAttribute('data-theme', theme);
-    localStorage.setItem('abe-theme', theme);
-
-    if (theme === 'dark') {
-      icon.textContent = '🌙';
-      label.textContent = 'Dark mode';
-    } else {
-      icon.textContent = '☀️';
-      label.textContent = 'Light mode';
-    }
-  }
-
-  // Load saved or default theme
-  const saved = localStorage.getItem('abe-theme');
-  applyTheme(saved ? saved : 'dark'); // DEFAULT IS DARK MODE
-
-  toggle.addEventListener('click', () => {
-    const current = root.getAttribute('data-theme');
-    const next = current === 'dark' ? 'light' : 'dark';
-    applyTheme(next);
-  });
-})();
-</script>
-    
-  <footer class="abe-footer" style="margin-top:3rem;padding:1.5rem 1rem;font-size:0.8rem;color:var(--muted);text-align:center;">
+<div class="main-wrap">
   <p>
-    © 2025 Terra Dawn Shouse. A.B.E. — American Butterfly Effect.
+    Upload your case, state statutes, or incident documents to begin a full constitutional and statutory audit
+    measuring divergence, funding compliance, and rights impact.
   </p>
-  <p>
-    Licensed under a 
-    <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener noreferrer" style="color:var(--link);">
-      Creative Commons Attribution-NonCommercial 4.0 International License (CC BY-NC 4.0)
-    </a>.
-    No commercial use, no paywalls.
+
+  <button class="abe-btn" onclick="window.location.href='/engine/index.html'">
+    Start Audit — Upload Your Case
+  </button>
+
+  <p style="margin-top:1.5rem; font-size:0.9rem;">
+    Already have an audit receipt?  
+    <a href="/engine/verify/index.html">Verify your SHA-256 audit hash</a>.
   </p>
-  </footer>  
+</div>
+
+<footer>
+  <div>A.B.E. — American Butterfly Effect</div>
+  <div class="footer-license">
+    Licensed under <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">
+    CC BY-NC 4.0 International</a>. No commercial use. No paywalls.  
+    © Terra Dawn Shouse
+  </div>
+</footer>
+
 </body>
 </html>
