--- a/engine/scorecard/index.html
+++ b/engine/scorecard/index.html
@@ -18,10 +18,11 @@
     .row{margin:.4rem 0;font-size:.95rem;}
     .label{color:var(--muted);}
     .score{font-weight:600;}
-    button{margin-top:1.2rem;background:var(--accent);color:#000;
+    .btn{margin-top:1.2rem;background:var(--accent);color:#000;
       padding:.75rem 1.4rem;border-radius:8px;border:none;
-      cursor:pointer;font-weight:600;font-size:1rem;}
-    button:hover{box-shadow:0 0 12px var(--accentGlow);}
+      cursor:pointer;font-weight:600;font-size:1rem;
+      text-decoration:none;display:inline-block;}
+    .btn:hover{box-shadow:0 0 12px var(--accentGlow);}
     footer{text-align:center;margin:2rem 0;color:var(--muted);
       font-size:.85rem;}
   </style>
@@ -39,12 +40,12 @@
   <div class="row"><span class="label">Funding Hook:</span> <span id="scFund" class="score"></span></div>
 
   <p style="margin-top:1rem;font-size:.9rem;">
-    This is an **early-stage prototype** scorecard.  
+    This is an early-stage prototype scorecard.  
     The full A.B.E. engine will plug in doctrine logic, case law weights,  
     and economic drag numbers here.
   </p>
 
-  <button onclick="next()">Export & Get Audit Hash →</button>
+  <a class="btn" href="../export/index.html">Export & Get Audit Block →</a>
 </div>
 
 <footer>© 2025 Terra Dawn Shouse — A.B.E. Engine</footer>
@@ -68,5 +69,7 @@
   document.getElementById('scType').textContent = type;
   document.getElementById('scSev').textContent = sev;
   document.getElementById('scFund').textContent = fund;
-
-  window.next = function() {
+})();
+</script>
+</body>
+</html>
